Don't use deprecated in Java 9 methods